@@ -19,6 +19,7 @@ Changes:
 - Add quirk for Silicon Power 16GB and more.
 - Add allow group when local users only mode on FTP service.
 - Add RRDtool and related files.
+- Add mapping DOS attributes on CIFS/SMB.
 - Remove usesendfile on CIFS/SMB.
 - Change ZFS pool info reflected from zpool list.
 - Upgrade bash 4.3 to patch 42.
